# tg-howwasyourday-v2

./: .gitignore  CLAUDE.md  Containerfile  README.md  bot.py  config.py  emotions.py  filters.py  howwasyourdaybot.service  new_plan.md  plot_emotions.py  pyproject.toml  requirements.txt  self-update.sh
howwasyourdaybot/: JSONPersistence.py  bot.py  bot_phrases_multilang.py  config.py  emotions.py  filters.py  get_stats_plots.py  phrases_multilang.py  plot_emotions.py
