[tool.poetry]
name = "tg-howwasyourday-v2"
version = "1.1.1"
description = "How was your day?"
authors = ["Ivan <toftul.ivan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "howwasyourdaybot"}]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = {extras = ["callback-data", "job-queue"], version = "^20.7"}
influxdb-client = "^1.37.0"
matplotlib = "^3.8.0"
pandas = "^2.1.3"

[tool.poetry.plugins]
poetry-dotenv-plugin = { package = "poetry-dotenv-plugin" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
